[package]
name = "orphic"
version = "0.1.0"
edition = "2021"
authors = ["Will Savage <wsavage6316@gmail.com>"]
description = "Orphic -- Interact with your system using natural language.\n(Powered by ChatGPT)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.9.2"
tokio = { version = "1.25.0", features = ["full"] }
substring = "1.4.5"
serde_json = "1.0"
lazy_static = "1.4.0"
execute = "0.2.11"
clap = { version = "4.1.8", features = ["cargo"] }
async-recursion = "1.0.2"

